# wasm_examples

./: -wasi.txt  -wasm.txt  .gitignore
component_model/calculator_example/: Makefile
component_model/compressor_example/: Makefile
component_model/greeter/: Cargo.toml  Makefile
component_model/hello_world/: Cargo.toml  Makefile
components/rsa/: LICENSE  Makefile  README.md
components/statistics/: Makefile  README.md
example-compilation/src/: main.rs
example-wasi/: Cargo.toml  build.sh  wams-lib.wat
example-wasi/src/: main.rs
example-wasi/wasm-lib/: Cargo.toml
example1/: run.sh
example10/: main.py  sum.c  sum.wat
example11/: .gitignore  main.py  sum.c  sum.wat
example12/: main.py  makefile
example2/: .gitignore  main.py  main.rs  makefile  readme.md  sum.c  sum.wat
example3/: Cargo.toml  main.js  main.py  main.rs  makefile  sum.wat
example4/: Cargo.toml  main.py  main.rs  makefile  readme.md  sum.c
example5/: Cargo.toml
example5/runner/: Cargo.toml
example6/: main.py  sum.wat
example7/: makefile  sum2.wat
example8/: main.py  sum.c  sum.wat
example9/: main.py  sum.c  sum.wat
wasi/threads/rust/: makefile
wasm_examples/data_example/: main.py  makefile  sum.wat
wasm_examples/global_example/: main.py  sum.wat
wasm_examples/guest_function_example/: sum.c  sum.wat
wasm_examples/host_function_example/: main.py  sum2.wat
wasm_examples/memory_example/: main.py  sum.c
wasm_examples/table_example/: main.py  makefile
wasm_examples/vectors_example/: main.py  sum.c  sum.wat
workshop_examples/component_model_example/: readme.md
(+76 files in other folders)
