[package]
name = "runner"
version = "0.1.0"
edition = "2024"

[package.metadata.component]
package = "component:runner"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"demo:statistics" = {path = "../component/wit"}

[dependencies]
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }
